# land-dd

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEX_PARALLEL.md  DESIGN.md  LANE_OWNERSHIP.md  MANIFEST.md  MILESTONE_MAP.md  Makefile  PROMPT_FOR_FRESH_CLAUDE_CODE_SESSION.md  PROMPT_FOR_FRESH_CODEX_SESSION.md  PROMPT_FOR_ISOLATED_LANE_AGENT.md  PROMPT_LANE_A.md  PROMPT_LANE_B.md  PROMPT_LANE_C.md  PROMPT_LANE_D.md  README.md  START_HERE.md  docker-compose.yml  manifest.json
backend/: AGENTS.md  CLAUDE.md  Dockerfile  pyproject.toml
backend/app/: __init__.py  deployment_readiness.py  dossier_readiness.py  expansion_readiness.py  main.py  observability_readiness.py  operations_guardrails.py  performance_guardrails.py  production_authority.py  project_readiness.py  release_readiness.py  security_guardrails.py  source_provenance.py
backend/tests/: test_access_control_artifacts.py  test_alerting_artifacts.py  test_authority_evidence_intake_artifacts.py  test_authority_follow_on_sequence_artifacts.py  test_bol_scope_auth_artifacts.py  test_bologna_odp1_owner_answer_packet_artifacts.py  test_bologna_odp1_owner_response_gate_artifacts.py  test_bologna_odp2_owner_answer_packet_artifacts.py  test_bologna_odp2_source_rights_response_gate_artifacts.py  test_bologna_odp3_corpus_response_gate_artifacts.py  test_bologna_odp4_db_report_proof_response_gate_artifacts.py  test_bologna_owner_answer_gate_evaluation.py  test_bologna_owner_answer_intake_artifacts.py  test_bologna_pilot_scope_authority_artifacts.py  test_bologna_preflight_artifacts.py  (+55 more)
(+1028 files in other folders)
